# VKMapsTask

./: CMakeLists.txt  main.cpp
FileReader/: FileReader.cpp  FileReader.h
PathFinder/: PathFinder.cpp  PathFinder.h
VkMapsTaskStructure/: TaskStructure.cpp  TaskStructure.h
